Worked on ad game bugs and user resume

--- a/html/pages/userresume/templates/listReferences.html
+++ b/html/pages/userresume/templates/listReferences.html
@@ -3,7 +3,7 @@
 	<div class="well section-rdtree-items_h">
 		<div class="row-fluid"><h3>{{sports_name}}</h3>
 		</div>
-		<div class="section-new-reference">
+		<!-- <div class="section-new-reference">
 		<div class="div-add-dotted well-small btn-Add-reference_h" sportId="{{sports_id}}">
 			+ Add an Reference
 		</div>
@@ -41,7 +41,7 @@
 				<span class="span12"> <a href="javascript:void(0)" class="btn btn-primary btn-Save_reference_h" sportid="{{sports_id}}">Save</a> <a href="javascript:void(0)" class="btn btn-Cancel-New">Cancel</a> <span class="alert alert-danger displayNone error_h"></span> <span class="alert alert-success displayNone success_h"></span>
 			</div>
 		</div>
-		</div>
+		</div> -->
 		{{#references}}
 		<div class="section-new-reference">
 			<div class="row-fluid section-new-controls">
