--- a/html/usercontrols/tag/templates/layout.html
+++ b/html/usercontrols/tag/templates/layout.html
@@ -51,12 +51,22 @@
 		<button class="btn btn-primary btn-tag-player-Done_h">Done</button>
 	</div>
 	
+	<div class="section-team-players_h displayNone">
+		<strong>Players :</strong> <br/>
+		<label class="lbl-tag-players-name_h"></label><span class="displayNone"><button class="btn btn-tag-edit-players-team_h displayNone">Edit</button></span>
+	</div>
+	
 	<div class="section-tag-game_h displayNone">
+		<strong>Tag a Game : </strong>
 		<select class="ddl-tag-game_h"></select>
 		<br/>
 		<span class="alert alert-danger displayNone field-message"></span>
 		<br/>
 		<button class="btn btn-primary btn-tag-game-Done_h displayNone">Done</button>
+	</div>
+	<div class="section-team-games_h displayNone">
+		<strong>Games :</strong> <br/>
+		<label class="lbl-tag-games-name_h"></label><span class="displayNone"><button class="btn btn-tag-edit-games-team_h displayNone">Edit</button></span>
 	</div>
 	
 	<div class="section-link_h displayNone">
