--- a/html/pages/team/team.css
+++ b/html/pages/team/team.css
@@ -205,3 +205,21 @@ position: relative;
 	width: 100%;
 	height: 100%;
 }
+
+
+
+/*  sports list */
+
+.sport-select-box {
+	display: inline-block;
+}
+
+.see-more-h {
+	float: right;
+margin-right: 100px;
+}
+
+#comment_div {
+	text-align: right;
+margin-right: 100px;
+}
