--- a/html/pages/team/templates/complevel-select.html
+++ b/html/pages/team/templates/complevel-select.html
@@ -1,4 +1,4 @@
-<select name="complevel" id="select-complevel">
+<select name="complevel" class="select-complevel">
 {{#payload}}
     <option value="{{complevel_id}}">{{complevel_name}}</option>    
 {{/payload}}
