--- a/html/pages/team/templates/header.html
+++ b/html/pages/team/templates/header.html
@@ -5,7 +5,6 @@
 	<div class="profile-heading">
             <h3 class="username">{{name}} '{{grad_year}}</h3>
             <h4>FORWARD</h4>
-            <div class="sports-h"></div>
     </div>
 	
 	
@@ -26,6 +25,21 @@
     </div-->
 </div>
 
-<div id="sports-info"></div>
+<div id="sports-info">
+	
+	<select class="sports-h">
+		<option>-SELECT--</option>
+	</select>
+	
+	<select class="season-h">
+		<option>-SELECT--</option>
+	</select>
+	
+	
+	<select class="team-h">
+		<option>-SELECT--</option>
+	</select>
+	
+</div>
 {{/payload}}
 
