--- a/html/pages/team/templates/layout.html
+++ b/html/pages/team/templates/layout.html
@@ -1,4 +1,4 @@
-<div class="template-container">
+<div class="template-container team-template-outer">
 <div id="main-header"></div>
 
 <div class="green-left-heading">MESSAGE BOARD</div>
