--- a/html/pages/home/templates/layout.html
+++ b/html/pages/home/templates/layout.html
@@ -1,11 +1,13 @@
-<div id="main-header"></div>
+<div class="template-container">
+	<div id="main-header"></div>
 
-<div id="main-content" class="row-fluid">
-	<div class="offset3 span2 text-center">
-		<strong>TOP RATED</strong>
+	<div id="main-content" class="row-fluid">
+		<div class="green-left-heading">PHOTO/VIDEO</div>
+		<div id="top-rated" class="clearfix clear"></div>
+		
+		
+		<div id="menu" class="clear"></div>
+		<div id="search-result" class="clear"></div>
 	</div>
-	<div id="top-rated" class="offset3 span8"></div>
-	<div id="menu" class="offset3 span7"></div>
-	<div id="search-result" class="offset3 span7"></div>
+	<div id="main-footer"></div>
 </div>
-<div id="main-footer"></div>
