--- a/html/pages/home/templates/image-item.html
+++ b/html/pages/home/templates/image-item.html
@@ -1,4 +1,3 @@
 {{#payload}}
-<img src="{{image_path}}" alt="{{image_title}}" vspace="5"
-	hspace="6" style="height:300px; width:300px;"/>
+<img src="{{image_path}}" alt="{{image_title}}"/>
 {{/payload}}
