--- a/html/pages/home/templates/menu.html
+++ b/html/pages/home/templates/menu.html
@@ -49,14 +49,14 @@
 	</div>
 </div>
 <div class="span5">
-	<div class="span2">SEARCH</div>
+	<div class="pull-left m-r-10">SEARCH</div>
 	<div class="pull-left">
 		<input type="text" id="search"></input>
 	</div>
-	<div >
+	<!--div >
 		<a id="video" class="searchBtn" data-number="0" href="javascript:void(0)"><i class="icon-facetime-video"></i></a>
 		<a id="image" class="searchBtn" data-number="1" href="javascript:void(0)"><i class="icon-picture"></i></a>
 		<a id="user" class="searchBtn" data-number="2" href="javascript:void(0)"><i class="icon-user"></i></a>
 		<a id="game" class="searchBtn" data-number="3" href="javascript:void(0)"><i class="icon-user"></i></a>
-	</div>
+	</div-->
 </div>
