team game Game API integration

--- a/html/packages/sportorg/templates/team-item.html
+++ b/html/packages/sportorg/templates/team-item.html
@@ -1,5 +1,12 @@
-
 {{#payload}}
-    {{team_name}}, {{location}} <br/>
+	<a href="javascript: void(0);" class="background-blue team-info-h">
+	<div class="org-popup hide">
+		<ul>
+			{{#teams}}
+			<li>
+				{{gameDay}} | VS. {{team_name}} | Home | W 2-1
+			</li>
+			{{/teams}}
+		</ul>
+	</div> </a>
 {{/payload}}
-
