--- a/html/pages/home/templates/layout.html
+++ b/html/pages/home/templates/layout.html
@@ -1,13 +1,20 @@
 <div class="template-container">
+	
+	<div>
+		
+		Space for register ppage
+		
+	</div>
+	
 	<div id="main-header"></div>
 
 	<div id="main-content" class="row-fluid">
 		<div class="green-left-heading">PHOTO/VIDEO</div>
-		<div id="top-rated" class="clearfix clear"></div>
+		<div id="top-rated" class="p-l-20 clearfix clear"></div>
 		
 		
-		<div id="menu" class="clear"></div>
-		<div id="search-result" class="clear"></div>
+		<div id="menu" class="p-l-20 clear"></div>
+		<div id="search-result" class="p-l-20 clear"></div>
 	</div>
 	<div id="main-footer"></div>
 </div>
