--- a/html/pages/home/templates/menu.html
+++ b/html/pages/home/templates/menu.html
@@ -1,7 +1,7 @@
+<div class="menu-outer-h">
 <div id="views" class="menu span2">
-	<a href="javascript:void(0)"> VIEWS <span class="caret"></span>
-	</a>
-	<div class="dd">
+	<a href="javascript:void(0)" class="menu-link-h"> VIEWS <span class="caret"></span></a>
+	<div class="dd menu-detail-h">
 		<div class="dropdown">
 			<a href="javascript:void(0)"> Browse <span class="caret"></span></a>
 			<div class="clearfix"></div>
@@ -24,9 +24,9 @@
 	</div>
 </div>
 <div id="sport" class="menu span2">
-	<a href="javascript:void(0)"> SPORT <span class="caret"></span>
+	<a href="javascript:void(0)" class="menu-link-h"> SPORT <span class="caret"></span>
 	</a>
-	<div class="dd">
+	<div class="dd menu-detail-h">
 		<div class="left text-center">
 			<strong>Guys</strong>
 			<div id='boys' class="text-left sport-list"></div>
@@ -42,8 +42,8 @@
 	</div>
 </div>
 <div id="location" class="menu span2">
-	<a href="javascript:void(0)"> LOCATION <span class="caret"></span></a>
-	<div class="dd">
+	<a href="javascript:void(0)"  class="menu-link-h"> LOCATION <span class="caret"></span></a>
+	<div class="dd menu-detail-h">
 		<div class="state"></div>
 		<div class="city"></div>
 	</div>
@@ -59,4 +59,5 @@
 		<a id="user" class="searchBtn" data-number="2" href="javascript:void(0)"><i class="icon-user"></i></a>
 		<a id="game" class="searchBtn" data-number="3" href="javascript:void(0)"><i class="icon-user"></i></a>
 	</div-->
+</div>
 </div>
