--- a/html/pages/home/templates/menu.html
+++ b/html/pages/home/templates/menu.html
@@ -2,12 +2,14 @@
 <div id="views" class="menu span2">
 	<a href="javascript:void(0)" class="menu-link-h"> VIEWS <span class="caret"></span></a>
 	<div class="dd menu-detail-h">
+		<a href="javascript: void(0);" class="btn views-reset-btn-h">Reset</a>
+		
 		<div class="dropdown">
 			<a href="javascript:void(0)"> Browse <span class="caret"></span></a>
 			<div class="clearfix"></div>
 			<ul class="dropdown-menu" style="display: block; position: relative; margin-bottom:15px;">
 				{{#views.browse}}
-				<li><a class="browse" href="javascript:void(0)">{{name}}</a></li>
+				<li><a class="browse" href="javascript:void(0);">{{name}}</a></li>
 				{{/views.browse}}
 			</ul>
 		</div>
@@ -17,7 +19,7 @@
 			<div class="clearfix"></div>
 			<ul class="dropdown-menu" style="display: block; position: relative;">
 				{{#views.time}}
-				<li><a class="time" href="javascript:void(0)">{{name}}</a></li>
+				<li><a class="time" href="javascript: void(0)">{{name}}</a></li>
 				{{/views.time}}
 			</ul>
 		</div>
@@ -27,6 +29,7 @@
 	<a href="javascript:void(0)" class="menu-link-h"> SPORT <span class="caret"></span>
 	</a>
 	<div class="dd menu-detail-h">
+		<a href="javascript: void(0);" class="btn sport-reset-btn-h">Reset</a>
 		<div class="left text-center">
 			<strong>Guys</strong>
 			<div id='boys' class="text-left sport-list"></div>
@@ -44,6 +47,7 @@
 <div id="location" class="menu span2">
 	<a href="javascript:void(0)"  class="menu-link-h"> LOCATION <span class="caret"></span></a>
 	<div class="dd menu-detail-h">
+		<a href="javascript: void(0);" class="btn location-reset-btn-h">Reset</a>
 		<div class="state"></div>
 		<div class="city"></div>
 	</div>
