remove selection after reset

--- a/html/pages/home/templates/menu.html
+++ b/html/pages/home/templates/menu.html
@@ -1,7 +1,7 @@
 <div class="menu-outer-h">
 <div id="views" class="menu span2">
 	<a href="javascript:void(0)" class="menu-link-h"> VIEWS <span class="caret"></span></a>
-	<div class="dd menu-detail-h">
+	<div class="dd menu-detail-h reset-view-area-h">
 		<a href="javascript: void(0);" class="btn views-reset-btn-h">Reset</a>
 		
 		<div class="dropdown">
@@ -28,7 +28,7 @@
 <div id="sport" class="menu span2">
 	<a href="javascript:void(0)" class="menu-link-h"> SPORT <span class="caret"></span>
 	</a>
-	<div class="dd menu-detail-h">
+	<div class="dd menu-detail-h reset-sport-area-h">
 		<a href="javascript: void(0);" class="btn sport-reset-btn-h">Reset</a>
 		<div class="left text-center">
 			<strong>Guys</strong>
@@ -46,7 +46,7 @@
 </div>
 <div id="location" class="menu span2">
 	<a href="javascript:void(0)"  class="menu-link-h"> LOCATION <span class="caret"></span></a>
-	<div class="dd menu-detail-h">
+	<div class="dd menu-detail-h reset-location-area-h">
 		<a href="javascript: void(0);" class="btn location-reset-btn-h">Reset</a>
 		<div class="state"></div>
 		<div class="city"></div>
