--- a/html/pages/team/team.css
+++ b/html/pages/team/team.css
@@ -103,35 +103,41 @@
 }
 
 .game-box-outer {
-	background-color: #e0e0e0;
-	border-radius: 20px;
-	width: 80%;
-	padding: 20px 40px;
-	margin: 0px 5% 48px 5%;
+    background-color: #e0e0e0;
+    border-radius: 40px;
+    width: 85%;
+    padding: 15px 25px;
+    margin: 0px 5% 48px 5%;
 }
 
 #games_div {
 	float: left;
 	width: 100%;
-	text-align: center;
+	text-align: left;
 }
 
 .game-box-outer ul {
-	background: #bbbbbc;
+    background: #bbbbbc;
+    height:10px;
+    border-radius:5px;
 }
 
 .game-box-outer li {
-	display: inline-block;
-	width: 10%;
-	border-radius: 25%;
+    position:relative;
+    display: inline-block;
+    margin-left:20px;
+    border-radius: 0;
+    top:-3px;
 }
 
 
 .game-box-outer li a {
-	padding: 7px 10px;
-border-radius: 50%;
-color: #FFF;
-position: relative;
+    padding:1px 10px 0px 10px;
+    border-radius: 25px;
+
+    border: 3px solid #bbbbbc;
+    color: #FFF;
+    position: relative;
 }
 
 .background-blue {
