--- a/html/login/templates/logintemplate.html
+++ b/html/login/templates/logintemplate.html
@@ -6,5 +6,5 @@
 <p>(Remember Me keeps you logged in for 2 weeks)</p>
 
 <input type="submit" name="login" value="Login" /></form>
-<p>Or <a href="/user/create">create a new account</a></p></div>
+<p>Or <a href="#user/create">create a new account</a></p></div>
 </div>
