--- a/html/pages/home/templates/menu.html
+++ b/html/pages/home/templates/menu.html
@@ -48,7 +48,7 @@
 	<a href="javascript:void(0)"  class="menu-link-h"> LOCATION <span class="caret"></span></a>
 	<div class="dd menu-detail-h reset-location-area-h">
 		<a href="javascript: void(0);" class="btn location-reset-btn-h">Reset</a>
-		<div class="state"></div>
+		<!--div class="state"></div-->
 		<div class="city"></div>
 	</div>
 </div>
