--- a/html/pages/home/templates/layout.html
+++ b/html/pages/home/templates/layout.html
@@ -9,7 +9,7 @@
 	<div id="main-header"></div>
 
 	<div id="main-content" class="row-fluid">
-		<div class="green-left-heading">PHOTO/VIDEO</div>
+		<div class="green-left-heading">Top Rated</div>
 		<div id="top-rated" class="p-l-20 clearfix clear"></div>
 		
 		
