--- a/html/pages/home/home.css
+++ b/html/pages/home/home.css
@@ -69,3 +69,22 @@ li.image img {
 	width: 220px;
 	height: 220px
 }
+
+.image-outer-h {
+	position: relative;
+	display: block;
+	overflow: hidden;
+	
+}
+
+.image-detail-view {
+	position: absolute;
+	bottom: -80px;
+	transition: bottom .3s linear;
+	-webkit-transition: bottom .3s linear;
+	-moz-transition: bottom .3s linear;
+	-o-transition: bottom .3s linear;
+	-ms-transition: bottom .3s linear;
+	background: rgba(19, 223, 80, .5);
+	width: 100%;
+}
