--- a/html/pages/home/templates/menu.html
+++ b/html/pages/home/templates/menu.html
@@ -1,3 +1,6 @@
+<div class="demo-select">
+
+	</div>	
 <div class="menu-outer-h">
 <div id="views" class="menu span2">
 	<a href="javascript:void(0)" class="menu-link-h"> VIEWS <span class="caret"></span></a>
@@ -25,6 +28,7 @@
 		</div>
 	</div>
 </div>
+
 <div id="sport" class="menu span2">
 	<a href="javascript:void(0)" class="menu-link-h"> SPORT <span class="caret"></span>
 	</a>
