--- a/html/css/app.css
+++ b/html/css/app.css
@@ -224,14 +224,23 @@ input[disabled].hasDatepicker, input[readonly].hasDatepicker {
 
 .image-detail-view {
 	position: absolute;
-	bottom: -80px;
+	bottom: -92px;
+    height: 92px;
 	transition: bottom .3s linear;
 	-webkit-transition: bottom .3s linear;
 	-moz-transition: bottom .3s linear;
 	-o-transition: bottom .3s linear;
 	-ms-transition: bottom .3s linear;
-	background: rgba(19, 223, 80, .5);
+	background: rgba(157, 202, 60, .75);
 	width: 100%;
+    color: white;
+
+}
+
+.image-detail-view h6{
+    margin: 15px 8px 8px 8px;
+    text-transform:uppercase;
+    font-size: 1.6em;
 }
 /***** Image Styles Ends *****/
 
