--- a/html/packages/vote/templates/vote.html
+++ b/html/packages/vote/templates/vote.html
@@ -1,2 +1,2 @@
-<a href="javascript:void(0);" class="team-action-h">Team</a>
+<a href="javascript:void(0);" class="team-action-h">Vote</a>
 <a href="javascript:void(0);" class="follow-action-h">Follow</a>
