--- a/html/pages/team/templates/header.html
+++ b/html/pages/team/templates/header.html
@@ -25,18 +25,9 @@
 </div>
 
 <div id="sports-info">
-	
-	<select class="sports-h">
-		<option>-SELECT--</option>
-	</select>
-	
-	<select class="season-h">
-		<option>-SELECT--</option>
-	</select>
-	
-	<select class="team-h">
-		<option>-SELECT--</option>
-	</select>
+	<div class="sports-h drop-down-main-outer"></div>
+	<div class="season-h drop-down-main-outer"></div>
+	<div class="team-h drop-down-main-outer"></div>
 </div>
 {{/payload}}
 
