css changes for autocomplete and dropdown

--- a/html/usercontrols/dropdown/template/layout.html
+++ b/html/usercontrols/dropdown/template/layout.html
@@ -5,7 +5,9 @@
 			{{dropView.title}}
 		</div>
 		<div class="down-arrow-outer">
-			<a href="javascript: void(0);" class="down-arrow icon-white up-down-arrow-h icon-chevron-down"></a>
+			<a href="javascript: void(0);" class="down-arrow up-down-arrow-h">
+				<span class="icon-white icon-chevron-down"></span>
+			</a>
 		</div>
 	</div>
 	<ul class="common-dropdown">
