--- a/html/css/app.css
+++ b/html/css/app.css
@@ -190,7 +190,7 @@ input[disabled].hasDatepicker, input[readonly].hasDatepicker {
 }
 
 .default-btn {
-	color: #FF0000;	
+	color: rgb(26, 160, 174);	
 }
 
 .default-btn:hover, .default-btn:active {
@@ -198,7 +198,7 @@ input[disabled].hasDatepicker, input[readonly].hasDatepicker {
 }
 
 .validation-btn {
-	color: green;
+	color: rgb(156, 202, 60);
 }
 
 .validation-btn:hover, .validation-btn:active {
@@ -317,7 +317,7 @@ input {
 }
 
 .region-dark {
-	background: brown;
+	background:  rgb(107, 110, 113);
 	color: #FFF;
 	padding: 5px 10px;
 	text-align: center;
@@ -332,6 +332,7 @@ input {
 	display: inline-block;
 	width: 200px;
 	position: absolute;
+	z-index: 1000;
 	
 }
 
@@ -370,7 +371,7 @@ ul.common-dropdown li.selected a {
 
 .drop-down-outer {
 	width: 100%;
-	height: 29px;
+	height: 30px;
 }
 
 .dropdown-header-box {
@@ -380,7 +381,7 @@ ul.common-dropdown li.selected a {
 }
 
 .down-arrow-outer {
-	background: #000000;
+	background: rgb(65, 67, 70);
 	display: inline-block;
 	width: 20%;
 	float: right;
@@ -389,8 +390,25 @@ ul.common-dropdown li.selected a {
 	color: #FFF;
 }
 
+.down-arrow-outer a {
+	display: block;
+	height: 100%;
+}
+
+.down-arrow-outer a span {
+	margin-top: 5px;
+}
+
+ul.common-dropdown li:first-child {
+	margin-top: 10px;
+}
+
+ul.common-dropdown li:last-child {
+	margin-bottom: 10px;
+}
+
 ul.common-dropdown li.selected {
-	background: green;
+	background: #1aa0ae;
 }
 
 .drop-down-main-outer {
@@ -401,4 +419,42 @@ ul.common-dropdown li.selected {
 
 #sports-info {
 	margin-bottom: 20px;
+}
+
+/**   Autocomplete css **/
+	
+.ui-autocomplete-input {
+	background: #eaedf1 !important;
+	color: #000000 !important;
+}
+
+
+ul.ui-autocomplete {
+	border: 2px solid #b5b9be;
+	padding: 10px 0 !important;
+	background: rgb(255, 255, 255) !important;
+}
+
+.ui-autocomplete li.ui-menu-item {
+	color: #000 !important;
+	width: auto !important;
+	padding: 0 !important;
+	
+	background: rgb(255, 255, 255) !important;
+}
+
+.ui-autocomplete li.ui-menu-item a {
+	padding: 5px 0 5px 15px !important;
+	border-radius: none;
+}
+
+span.ui-helper-hidden-accessible {
+	display: none;
+}
+
+
+.ui-menu .ui-menu-item a:hover, .ui-state-focus {
+	color: #FFF !important;
+	background: #1AA0AE !important;
+	border: none !important;
 }
