--- a/html/usercontrols/dropdown/template/layout.html
+++ b/html/usercontrols/dropdown/template/layout.html
@@ -12,7 +12,8 @@
 	</div>
 	<ul class="common-dropdown">
 		{{#records}}
-		<li>
+		
+		<li class="{{#dropView.defaultSelected}}{{dropView.defaultSelected}}{{/dropView.defaultSelected}}">
 			<a data-id="{{#dropView.getRecordId}}{{dropView.getRecordId}}{{/dropView.getRecordId}}" href="javascript: void(0);">{{#dropView.getRecordValue}}{{dropView.getRecordValue}}{{/dropView.getRecordValue}}</a>
 		</li>
 		{{/records}}
