--- a/html/packages/media/templates/image-item.html
+++ b/html/packages/media/templates/image-item.html
@@ -1,13 +1,11 @@
-
-{{#payload}}
-{{#original_url}}
-<video controls>
-  <source src="{{original_url}}" type="video/mp4">
-</video>
-{{/original_url}}
-{{^original_url}}
-<img  src="{{base_url}}{{image_path}}" alt="{{email}}"/>
-{{/original_url}}
-{{#num_votes}}{{num_votes}} Votes{{/num_votes}}
-{{/payload}}
-
+	<a href="{{_link}}" class="image-outer-h">
+		<img src="{{_thumbnail}}" alt=""/>
+		<div class="action-section">
+			<div class="action-block vote" subject-type-id="{{_enttypes_id}}" subject-id="{{_id}}">V</div>
+			<div class="action-block follow" subject-type-id="{{_enttypes_id}}" subject-id="{{_id}}">F</div>
+		</div>
+		<div class="detail-view {{#_detailclass}}{{_detailclass}}{{/_detailclass}}">
+			<h6>{{_label}}</h6>
+			<span>{{_sublabel}}</span>
+		</div>
+	</a>
