--- a/html/pages/profile/templates/header.html
+++ b/html/pages/profile/templates/header.html
@@ -2,9 +2,10 @@
 <div class="row-fluid">
 	
 	<div class="profile-heading">
+		<div class="sports-h"></div>
             <h3 class="username">{{name}} '{{grad_year}}</h3>
-            <h4>FORWARD</h4>
-            <div class="sports-h"></div>
+            <h4>Position</h4>
+
     </div>
 	
 	<div class="row-fluid profile-pic-outer">
