--- a/html/pages/profile/templates/sports.html
+++ b/html/pages/profile/templates/sports.html
@@ -1,3 +1,3 @@
 {{#payload}}
-    <a href="javascript: void(0);" class="sports-icon-h" data-id="{{id}}">{{sport_name}}</a>, 
+    <img src="{{large_icon}}" class="sports-icon-h" data-id="{{id}}" />
 {{/payload}}
