--- a/html/css/app.css
+++ b/html/css/app.css
@@ -222,6 +222,26 @@ input[disabled].hasDatepicker, input[readonly].hasDatepicker {
 
 /***** Image Styles *****/
 
+ul li.image{
+    padding:10px;
+    /*	margin-right: 20px;
+        margin-bottom: 20px;*/
+}
+
+div.image-item-container{
+
+    width:220px;
+    height: 220px;
+    overflow: hidden;
+}
+
+li.image img {
+    position: absolute;
+    min-width: 100%;
+    min-height: 100%;
+    max-width: 1000%;
+}
+
 .action-section{
     width:100%;
     position:absolute;
