--- a/html/packages/media/templates/image-item.html
+++ b/html/packages/media/templates/image-item.html
@@ -3,8 +3,14 @@
 		<img src="{{_thumbnail}}" alt=""/>
 
 			<div class="action-section">
-				<div class="action-block vote" subject-type-id="{{_enttypes_id}}" subject-id="{{_id}}">V</div>
-				<div class="action-block follow" subject-type-id="{{_enttypes_id}}" subject-id="{{_id}}">F</div>
+				{{#show_edit}}
+					<div class="action-block left-block edit" subject-type-id="{{_enttypes_id}}" subject-id="{{_id}}"><span>E</span></div>
+					<div class="action-block right-block delete" subject-type-id="{{_enttypes_id}}" subject-id="{{_id}}"><span>D</span></div>
+				{{/show_edit}}
+				{{^show_edit}}
+					<div class="action-block left-block vote" subject-type-id="{{_enttypes_id}}" subject-id="{{_id}}"><span>V</span></div>
+					<div class="action-block right-block follow" subject-type-id="{{_enttypes_id}}" subject-id="{{_id}}"><span>F</span></div>
+				{{/show_edit}}
 			</div>
 			<div class="detail-view {{#_detailclass}}{{_detailclass}}{{/_detailclass}}">
 				<h6>{{_label}}</h6>
