--- a/html/packages/media/templates/image-item.html
+++ b/html/packages/media/templates/image-item.html
@@ -14,7 +14,7 @@
 			</div>
 			<div class="detail-view {{#_detailclass}}{{_detailclass}}{{/_detailclass}}">
 				<h6>{{_label}}</h6>
-				<span>{{_sublabel}}</span>
+				<span>{{& _sublabel}}</span>
 			</div>
 		</div>
 
